[package]
name = "syntax_fuzz"
version = "0.1.0"
authors = ["Shotaro Yamada <sinkuu@sinkuu.xyz>"]
edition = "2018"

[dependencies]
syntax = { package = "rustc-ap-syntax", version = "637.0.0" }
rustc_span = { package = "rustc-ap-rustc_span", version = "637.0.0" }
rustc_session = { package = "rustc-ap-rustc_session", version = "637.0.0" }
rustc_errors = { package = "rustc-ap-rustc_errors", version = "637.0.0" }
rustc_parse = { package = "rustc-ap-rustc_parse", version = "637.0.0" }
